added fuzz tests

--- a/foundry.toml
+++ b/foundry.toml
@@ -8,3 +8,10 @@ libs = ["lib"]
 remappings = ['@chainlink/contracts=lib/chainlink-brownie-contracts/contracts','@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
 
 
+[invariant] 
+runs = 128
+depth = 128 #no. of calls in a single run
+fail_on_revert = false
+
+[fuzz]
+runs = 100
